# Markerauto2.0

./: README.md
Markerauto2/: CMakeLists.txt
Markerauto2/lib/: CMakeLists.txt
Markerauto2/src/dataf/: camera.cpp  keypoint.h  quat_vec.cpp  quat_vec.h
Markerauto2/src/detector/: BaseFun.cpp  BaseFun.h  CMakeLists.txt  detector.cpp  fundmental.cpp  hicluster.cpp  hicluster.h  option.h  templateMatch.h  wavelet.cpp  wavelet.h
Markerauto2/src/main/: CMakeLists.txt  main.cpp  opts.h
Markerauto2/src/modelmatch/: 4pcs.cpp  CMakeLists.txt  match_core.cpp  r4pestimator.cpp
Markerauto2/src/mrcimg/: CMakeLists.txt  img_util.h  mrc2img.cpp  mrc2img.h
Markerauto2/src/nbundle/: code_bak  geometry_data.h  img_projs.cpp  img_projs.h  micros.h  params.cpp
Markerauto2/src/ransac/: CMakeLists.txt
Markerauto2/src/test/: test.cpp
examples/: BBb.rawtlt
lib/ann_1.2_char/src/: ANN.cpp
mrctools_opencv4.5/: CMakeLists.txt
mrctools_opencv4.5/lib/: CMakeLists.txt  gnuplot_i.hpp  gnuplot_i.hpp~
mrctools_opencv4.5/src/: CMakeLists.txt
mrctools_opencv4.5/src/dataf/: CMakeLists.txt~  calibration.h  calibration.h~  camera.cpp  camera.cpp~  camera.h  camera.h~  dataf.cpp  dataf.cpp~  dataf.h  dataf.h~  frame.cpp  frame.h  frame.h~  keypoint.h  keypoint.h~  point2d.cpp  point2d.h  quat_vec.h  quat_vec.h~
mrctools_opencv4.5/src/mrc2pgm/: CMakeLists.txt  main.cpp  opts.h
mrctools_opencv4.5/src/mrcimg/: CMakeLists.txt  img_util.h  mrc2img.cpp  mrc2img.h  mrcheader.cpp  mrcheader.h
mrctools_opencv4.5/src/mrcstack/: CMakeLists.txt  main.cpp  opts.h
src/: CMakeLists.txt
src/dataf/: calibration.h  camera.h  dataf.cpp  dataf.h
src/detector/: GaussFit.cpp  GaussFit.h  detector.h  fundmental.h  kd_tree.cpp  kd_tree.h  option.cpp  templateMatch.cpp
src/main/: CMakeLists.txt  main.cpp
src/modelmatch/: 4pcs.h  cpdestimator.cpp  cpdestimator.h  match_core.h  r4pestimator.h  searchtree.cpp
src/nbundle/: CMakeLists.txt  bundle_core.cpp  bundle_core.h  params.h  sfm_driver.cpp  sfm_driver.h  sfm_driver2.cpp  sfm_driver2.h  triangulate.cpp  triangulate.h
src/ransac/: ransac_core.h  xform.cpp  xform.h
