cmake_minimum_required(VERSION 3.5)

project(mrctools C CXX)
set(CMAKE_CXX_STANDARD 11)

set(ANN_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/ann_1.2_char/include)
set(CLAPACK_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/clapack_3.1/INCLUDE)
set(MRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/mrc)
set(BLASWRAP_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/clapack_3.1/BLAS/WRAP)
set(CBLAS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/cblas/INCLUDE)
set(SBA_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/sba_1.6)
set(MATRIX_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/matrix)
#set(OPENCV_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/opencv_2.4.1 
#    ${PROJECT_SOURCE_DIR}/lib/opencv_2.4.1/opencv ${PROJECT_SOURCE_DIR}/lib/opencv_2.4.1/opencv2 )
set(LEVMAR_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib/levmar_2.5)

#find_package(OpenCV REQUIRED PATHS "..")
find_package(OpenCV REQUIRED)
#MESSAGE(STATUS ${OpenCV_INCLUDE_DIRS})

include_directories(${PROJECT_SOURCE_DIR}/lib ${ANN_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/src 
    ${CLAPACK_INCLUDE_DIR} ${BLASWRAP_INCLUDE_DIR} ${CBLAS_INCLUDE_DIR} ${MRC_INCLUDE_DIR} ${SBA_INCLUDE_DIR}
    ${MATRIX_INCLUDE_DIR} ${LEVMAR_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})

link_directories(${PROJECT_BINARY_DIR}/lib)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

add_subdirectory(lib)
add_subdirectory(src)

