

# add_subdirectory(dataf)
#add_subdirectory(util)
add_subdirectory(mrcimg)
add_subdirectory(mrc2pgm)
# add_subdirectory(mrcsplit)
# add_subdirectory(mrcnorm)
# add_subdirectory(mrcmask)
# add_subdirectory(mrclowpastf)
# add_subdirectory(mrc3pproj)
# add_subdirectory(mrc3pmtx)
# add_subdirectory(mrcranxf)
# add_subdirectory(mrcadd)
# add_subdirectory(mrcavg)
# add_subdirectory(mrccalnv)
# add_subdirectory(mrcextend)
# add_subdirectory(mrcsplfilter)
# add_subdirectory(mrcmoduleproj)
add_subdirectory(mrcstack)
# add_subdirectory(mrcstretchpxval)
# add_subdirectory(mrcsimulator)
# add_subdirectory(mrc3psplit)
